--- a/css/text-body-formatting.css
+++ b/css/text-body-formatting.css
@@ -24,10 +24,12 @@
 #text-body h3 {
   margin: 0;
   margin-top: 0.5rem;
+  font-size: var(--text-content-h3-size);
 }
 
 #text-body p {
   margin: 1.2rem 0;
+  font-size: var(--text-content-p-size);
 }
 
 #text-body img {
