--- a/css/text-body-formatting.css
+++ b/css/text-body-formatting.css
@@ -24,13 +24,18 @@
 #text-body h3 {
   margin: 0;
   margin-top: 0.5rem;
+  margin-bottom: 0.25rem;
   font-size: var(--text-content-h3-size);
 }
 
 #text-body p {
-  margin: 1.2rem 0;
+  margin: 2rem 0;
   font-size: var(--text-content-p-size);
-  line-height: 1.5rem;
+  line-height: 1.55rem;
+}
+
+.p-below-header {
+  margin-top: 0 !important;
 }
 
 #text-body img {
@@ -65,4 +70,5 @@
 
 .content-img-desc {
   font-style: italic;
+  margin-top: 0.5rem !important;
 }
