Fixed Images, added Code styling
Will finish psoft and portfolio pages later today.

--- a/css/colors.css
+++ b/css/colors.css
@@ -12,6 +12,7 @@
     --contact-border: #9c9c9c;
     --breadcrumb-link: #3e6d8f;
     --content-line: #666666;
+    --code-bg: #f0f0f0;
 
     --toggle-thumb: #ffffff;
     --toggle-track: #ccc;
@@ -38,6 +39,7 @@
     --project-img-border: #9c9c9c;
     --breadcrumb-link: #84a1c2;
     --content-line: #444444;
+    --code-bg: #535353;
     
     --toggle-thumb: #000000;
     --toggle-track:  #4d4d4d;
