--- a/css/text-body-formatting.css
+++ b/css/text-body-formatting.css
@@ -66,6 +66,14 @@
   margin-bottom: 2rem;
 }
 
+#text-body code {
+  background-color: var(--code-bg);
+  padding: 0.075rem 0.3rem;
+  border-radius: 4px;
+  font-family: monospace;
+  transition: color 0.2s ease, background-color 0.2s ease;
+}
+
 #security-list p {
   margin: 0;
   margin: 0.25rem 0;
