--- a/css/colors.css
+++ b/css/colors.css
@@ -12,7 +12,7 @@
     --contact-border: #9c9c9c;
     --breadcrumb-link: #3e6d8f;
     --content-line: #666666;
-    --code-bg: #f0f0f0;
+    --code-bg: #f3f3f3;
 
     --toggle-thumb: #ffffff;
     --toggle-track: #ccc;
@@ -30,7 +30,7 @@
     /* General */
     --standard-text: #ffffff;
     --site-background: #111111; /* #141415 is nice too */
-    --content-background: #1A1A1A;
+    --content-background: #202020;
     --project-preview: #222222;
     --nav-background: #222222;
     --default-button: #444444;
@@ -39,7 +39,7 @@
     --project-img-border: #9c9c9c;
     --breadcrumb-link: #84a1c2;
     --content-line: #444444;
-    --code-bg: #535353;
+    --code-bg: #353535;
     
     --toggle-thumb: #000000;
     --toggle-track:  #4d4d4d;
