Improved Site Interactivity
Added animations to the home page, added transform to nav button hover, added light mode shadows

--- a/css/experience.css
+++ b/css/experience.css
@@ -12,7 +12,7 @@
 
 .view-resume {
   margin: 1rem 0;
-  display: var(--view-resume-visibility);
+  display: var(--resume-button-display) !important;
 }
 
 .exp-preview-container {
