--- a/css/scaling.css
+++ b/css/scaling.css
@@ -40,6 +40,7 @@ I'm not going to put every variable here, instead I made them as explicit as pos
         --experience-header-flex-direction: column;
         --project-desc-size: 1.125rem;
         --project-date-size: 1.125rem;
+        --resume-button-display: none;
 
         /* Text Content */
         --detail-page-header-size: 3rem;
@@ -77,6 +78,7 @@ I'm not going to put every variable here, instead I made them as explicit as pos
         --experience-header-flex-direction: row;
         --project-desc-size: 1rem;
         --project-date-size: 1rem;
+        --resume-button-display: flex;
 
         /* Text Content */
         --text-content-padding: 3rem 5rem;
