--- a/css/home.css
+++ b/css/home.css
@@ -15,6 +15,11 @@
 .name-header {
     font-size: var(--name-header-size);
     margin: 0;
+    text-shadow:
+        2px 2px 4px rgba(0, 0, 0, 0.1875),
+        0 0 10px rgba(0, 0, 0, 0.15),
+        3px 5px 20px rgba(0, 0, 0, 0.1125),
+        0 0 12px rgba(255, 255, 255, 0.45);
 }
 
 [data-theme="dark"]
@@ -29,6 +34,11 @@
     width: var(--home-desc-width);
     text-align: center;
     font-weight: 600;
+    text-shadow:
+        1px 1px 2px rgba(0, 0, 0, 0.12),
+        0 0 4px rgba(0, 0, 0, 0.1),
+        0 0 6px rgba(255, 255, 255, 0.4);
+
 }
 
 [data-theme="dark"]
@@ -58,4 +68,60 @@
 
 .yt-image {
     height: 1.25rem;
+}
+
+@keyframes flyInLeft {
+  from {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes flyInRight {
+  from {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes flyInUp {
+  from {
+    opacity: 0;
+    transform: translateY(400px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.fly-in-left {
+  animation: flyInLeft 0.6s ease-out forwards;
+}
+
+.fly-in-right {
+  animation: flyInRight 0.6s ease-out forwards;
+}
+
+.fly-in-bottom-1 {
+  animation: flyInUp 0.4s ease-out forwards;
+  animation-delay: 0.4s;
+}
+
+.fly-in-bottom-2 {
+  animation: flyInUp 0.4s ease-out forwards;
+  animation-delay: 0.6s;
+}
+
+.fly-in-bottom-3 {
+  animation: flyInUp 0.4s ease-out forwards;
+  animation-delay: 0.8s;
 }
