--- a/css/index.css
+++ b/css/index.css
@@ -97,7 +97,7 @@ html, body {
 .left-guide-button, .right-guide-button {
   position: absolute; 
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  transition: color 0.2s ease, background-color 0.2s ease, border-color 0.2s ease;
+  transition: color 0.2s ease, background-color 0.2s ease, border-color 0.2s ease, transform 0.2s ease;
   bottom: 2.25rem;
   height: 2.25rem;
   width: auto;
@@ -116,6 +116,7 @@ html, body {
 
 .left-guide-button:hover, .right-guide-button:hover {
   background-color: var(--hover-default-button);
+  transform: scale(1.05);
 }
 
 .main-page-header {
@@ -123,6 +124,10 @@ html, body {
   text-align: var(--main-page-header-align);
   margin: 0;
   flex-grow: 1;
+  text-shadow:
+      1px 1px 2px rgba(0, 0, 0, 0.12),
+      0 0 4px rgba(0, 0, 0, 0.1),
+      0 0 6px rgba(255, 255, 255, 0.4);
 }
 
 [data-theme="dark"]
@@ -216,10 +221,12 @@ html, body {
 
 .home-contact-button {
   display: var(--full-contact-button-visibility);
+  opacity: 0;
 }
 
 .mobile-home-contact-button {
   display: var(--contact-button-icon-visibility);
+  opacity: 0;
 }
 
 .github-image-wrapper {
