Resolved Resume Viewing
Previously, the view resume button appeared on mobile, but on click, the page did not load the embedded pdf. Now, if the screen width is less than 1024px, the user gets redirected to the actual pdf, rather than a page that contains the embedded version.

--- a/css/experience.css
+++ b/css/experience.css
@@ -10,9 +10,14 @@
     flex-grow: 1;
 }
 
-.view-resume {
-  margin: 1rem 0;
-  display: var(--resume-button-display) !important;
+.view-resume-desktop {
+    margin: 1rem 0;
+    display: var(--desktop-resume-button-display) !important;
+}
+
+.view-resume-mobile {
+    margin: 1rem 0;
+    display: var(--mobile-resume-button-display) !important;
 }
 
 .exp-preview-container {
