--- a/css/techstack.css
+++ b/css/techstack.css
@@ -53,7 +53,7 @@
     margin-top: 0.5rem;
 }
 
-/* Frontend */
+/* Front-end */
 .vite { background: #646cff; color: #fff; }
 .react { background: #61dafb; color: #0b0f14; }
 .ts { background: #3178c6; color: #fff; }
