--- a/css/scaling.css
+++ b/css/scaling.css
@@ -117,6 +117,7 @@ I'm not going to put every variable here, instead I made them as explicit as pos
         /* Text Content */
         --text-content-padding: 3rem 5rem;
         --text-body-max-img-width: 90%;
+        --text-content-h3-size: 1.20rem;
     }
 }
 
