--- a/css/text-body-formatting.css
+++ b/css/text-body-formatting.css
@@ -40,6 +40,7 @@
   margin-bottom: 2rem;
   font-size: var(--text-content-p-size);
   line-height: 1.55rem;
+  letter-spacing: 0.01em;
 }
 
 #content-img-container {
