First Iteration of LXA
Completed most of the LXA page, going to make this commit, then go through and add tooltips to other pages on the site like I did here, then come back and keep adding to it.

--- a/css/text-body-formatting.css
+++ b/css/text-body-formatting.css
@@ -25,7 +25,7 @@
   margin: 0;
   margin-top: 0.5rem;
   margin-bottom: 0.25rem;
-  font-size: var(--text-content-h3-size);
+  font-size: var(--text-content-h3-size) !important;
 }
 
 #text-body h4 {
@@ -62,6 +62,8 @@
 
 #content-img-container p {
   font-style: italic;
+  text-align: center;
+  width: 70%;
 }
 
 #text-body hr {
