--- a/css/scaling.css
+++ b/css/scaling.css
@@ -5,7 +5,7 @@ are the variables and what they do
 
 --site-font-size: Global font size; What rem is based off of
 --content-width: Width of content user interacts / reads (increases with screen size)
---main-page-header-size: Projects, Experience, Blogs
+--main-page-header-size: Projects, Experience
 --main-page-header-align: Alignment of the description of the above headers
 --detail-page-header-size: Speed Roulette, Submitty, Rensselaer Polytechnic Institute, etc
 
