Added Coming Soon

--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,7 @@
 @import 'experience.css';
 @import 'breadcrumb.css';
 @import 'techstack.css';
+@import 'coming-soon.css';
 @import 'text-body-formatting.css';
 
 /* This stylesheet contains everything shared by more than 1 page / component. */
