--- a/css/text-body-formatting.css
+++ b/css/text-body-formatting.css
@@ -16,7 +16,7 @@
 #text-body h2 {
     display: block;
     margin-bottom: 0.5rem;
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: bold;
     unicode-bidi: isolate;
 }
@@ -24,15 +24,15 @@
 #text-body h3 {
   margin: 0;
   margin-top: 0.5rem;
-  margin-bottom: 0.25rem;
-  font-size: var(--text-content-h3-size) !important;
+  margin-bottom: 0.30rem;
+  font-size: 1.5rem;
 }
 
 #text-body h4 {
   margin: 0;
   margin-top: 0.5rem;
   margin-bottom: 0.25rem;
-  font-size: var(--text-content-h4-size);
+  font-size: 1.35rem;
 }
 
 #text-body p {
@@ -89,6 +89,7 @@
 #text-body ul {
   margin-top: 0.5rem;
   margin-bottom: 2rem;
+  font-size: var(--text-content-p-size)
 }
 
 #text-body code {
