--- a/css/colors.css
+++ b/css/colors.css
@@ -5,6 +5,7 @@
     --site-background: #eceff1;
     --content-background: #ffffff;
     --project-preview: #ffffff;
+    --border-project-preview: #f5f5f5;
     --nav-background: #ffffff;
     --default-button: #ffffff;
     --active-nav: #dee8f3;
@@ -22,8 +23,8 @@
 
     --hover-nav-text: #eef2f6;
     --hover-default-button: #f5f5f5; 
-    --hover-project-preview: #f5f5f5;
     --hover-anchor-link: #9213a3;
+    --hover-project-preview: #33333350;
 }
 
 [data-theme="dark"] {
@@ -32,6 +33,7 @@
     --site-background: #111111; /* #141415 is nice too */
     --content-background: #1D1D1D;
     --project-preview: #222222;
+    --border-project-preview: #333333;
     --nav-background: #222222;
     --default-button: #444444;
     --active-nav: #111111;
@@ -49,6 +51,6 @@
 
     --hover-nav-text: #1A1A1A;
     --hover-default-button: #555555; 
-    --hover-project-preview: #333333;
     --hover-anchor-link: #a0c0e5;
+    --hover-project-preview: #0059ff50;
 }
