--- a/css/projects.css
+++ b/css/projects.css
@@ -35,7 +35,8 @@
 }
 
 .project-preview-container:hover {
-  box-shadow: 0 0 1.5rem 0.65rem var(--hover-project-preview);
+  box-shadow: 0 0.45rem 1.25rem var(--hover-project-preview);
+  scale: 1.025;
 }
 
 .project-contact-btn {
