--- a/css/colors.css
+++ b/css/colors.css
@@ -18,8 +18,8 @@
     --toggle-thumb: #ffffff;
     --toggle-track: #ccc;
 
-    --tech-stack-section: #eeeeee;
-    --tech-stack-border: #000000;
+    --tech-stack-section: #dddddd85;
+    --tech-stack-border: #1A1A1A;
 
     --hover-nav-text: #eef2f6;
     --hover-default-button: #f5f5f5; 
@@ -46,8 +46,8 @@
     --toggle-thumb: #000000;
     --toggle-track:  #4d4d4d;
 
-    --tech-stack-section: #222933;
-    --tech-stack-border: #0059ff;
+    --tech-stack-section: #13131370;
+    --tech-stack-border: #383838;
 
     --hover-nav-text: #1A1A1A;
     --hover-default-button: #555555; 
