--- a/css/techstack.css
+++ b/css/techstack.css
@@ -65,6 +65,7 @@
 .go { background: #00add8; color: #032027; }
 .php { background: #777bb3; color: #fff; }
 .python { background: #3776ab; color: #ffdf76; }
+.nodejs { background: #68a063; color: #fff; }
 
 /* Database / Caching */
 .postgres { background: #336791; color: #fff; }
