Small Updates, updated HVCC
Made small updates to preview shadowing and skills, then updated the HVCC page as a whole.

--- a/css/projects.css
+++ b/css/projects.css
@@ -35,7 +35,7 @@
 }
 
 .project-preview-container:hover {
-  box-shadow: 0.25rem 0.25rem 1.25rem var(--hover-project-preview);
+  box-shadow: 0 0 1.25rem var(--hover-project-preview);
   scale: 1.025;
 }
 
