--- a/css/colors.css
+++ b/css/colors.css
@@ -11,7 +11,7 @@
     --active-nav: #dee8f3;
     --nav-border: transparent;
     --contact-border: #9c9c9c;
-    --anchor-link: #76129e;
+    --anchor-link: #3366CC;
     --content-line: #666666;
     --code-bg: #f3f3f3;
 
@@ -23,7 +23,7 @@
 
     --hover-nav-text: #eef2f6;
     --hover-default-button: #f5f5f5; 
-    --hover-anchor-link: #9213a3;
+    --hover-anchor-link: #274d99;
     --hover-project-preview: #22222290;
 }
 
