--- a/css/index.css
+++ b/css/index.css
@@ -28,6 +28,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+* {
+  box-sizing: border-box;
+}
+
+
 html {
     font-size: var(--site-font-size);
     scrollbar-gutter: stable both-edges;
