Updated Stewarts, made some other small changes

--- a/css/colors.css
+++ b/css/colors.css
@@ -1,4 +1,6 @@
 :root {
+    --site-font: system-ui, Avenir, Helvetica, Arial, sans-serif;
+
     /* General */
     --standard-text: #1A1A1A;
     --always-white: #ffffff;
