--- a/css/coming-soon.css
+++ b/css/coming-soon.css
@@ -14,6 +14,6 @@
   transition: color 0.2s ease;
   color: var(--standard-text);
   font-weight: bold;
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: var(--site-font);
   margin: 0;
 }
