--- a/css/scaling.css
+++ b/css/scaling.css
@@ -48,6 +48,7 @@ I'm not going to put every variable here, instead I made them as explicit as pos
         --text-content-padding: .3rem .5rem;
         --text-page-header-size: 2rem;
         --text-body-max-img-width: 100%;
+        --content-img-p-width: 90%;
         --text-content-bg-shadow: none;
         --text-content-p-size: 1.2rem;
         --text-content-code-size: 1rem;
@@ -87,6 +88,7 @@ I'm not going to put every variable here, instead I made them as explicit as pos
         --text-content-padding: 3rem 5rem;
         --text-page-header-size: 3rem;
         --text-body-max-img-width: 100%;
+        --content-img-p-width: 90%;
         --text-content-bg-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
         --text-content-p-size: 1.15rem;
         --text-content-code-size: 0.95rem;
@@ -119,6 +121,7 @@ I'm not going to put every variable here, instead I made them as explicit as pos
         /* Text Content */
         --text-content-padding: 3rem 5rem;
         --text-body-max-img-width: 90%;
+        --content-img-p-width: 80%;
         --text-content-h3-size: 1.25rem;
     }
 }
@@ -143,6 +146,7 @@ I'm not going to put every variable here, instead I made them as explicit as pos
         --text-content-padding: 3rem 5rem;
         --text-page-header-size: 3rem;
         --text-body-max-img-width: 80%;
+        --content-img-p-width: 70%;
         --text-content-h3-size: 1.25rem;
     }
 }
@@ -167,6 +171,7 @@ I'm not going to put every variable here, instead I made them as explicit as pos
         --text-content-padding: 3rem 5rem;
         --text-page-header-size: 4rem;
         --text-body-max-img-width: 80%;
+        --content-img-p-width: 70%;
         --text-content-h3-size: 1.25rem;
     }
 }
