--- a/css/text-body-formatting.css
+++ b/css/text-body-formatting.css
@@ -22,9 +22,8 @@
 }
 
 #text-body h3 {
-  margin: 0;
-  margin-top: 0.5rem;
-  margin-bottom: 0.30rem;
+  padding-top: 0.50rem;
+  margin: 0 0 0.30rem 0;
   font-size: 1.45rem;
 }
 
@@ -36,8 +35,7 @@
 }
 
 #text-body p {
-  margin-top: 0 !important;
-  margin-bottom: 2rem;
+  margin: 0 0 2rem 0;
   font-size: var(--text-content-p-size);
   line-height: 1.55rem;
   letter-spacing: 0.01em;
@@ -63,7 +61,7 @@
 #content-img-container p {
   font-style: italic;
   text-align: center;
-  width: 70%;
+  width: var(--content-img-p-width);
 }
 
 #text-body hr {
