--- a/css/techstack.css
+++ b/css/techstack.css
@@ -30,6 +30,10 @@
 }
 
 .techStack__section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
     transition: color 0.2s ease, background-color 0.2s ease, border 0.2s ease;
     background: var(--tech-stack-section);
     border: 0.15rem solid var(--tech-stack-border);
@@ -41,15 +45,18 @@
 .techStack__title {
     font-size: 0.95rem;
     font-weight: 700;
-    padding-bottom: 0.375rem;
+    padding: 0;
+    padding: 0 0 0.75rem 0 !important;
     margin: 0 !important;
 }
 
 .techStack__badges {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 0.375rem;
-    margin-top: 0.5rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.375rem;
+  width: 90%;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Front-end */
