Adding Pictures to CC

--- a/css/text-body-formatting.css
+++ b/css/text-body-formatting.css
@@ -116,4 +116,9 @@
   min-height: 80px;
   border: 1px solid #ccc;
   border-radius: 8px;
+  padding: 0.5rem;
+}
+
+.display-grid-cell img {
+  height: 5rem !important;
 }
