Convert site font to helvetica

--- a/css/colors.css
+++ b/css/colors.css
@@ -1,5 +1,5 @@
 :root {
-    --site-font: system-ui, Avenir, Helvetica, Arial, sans-serif;
+    --site-font: Helvetica, Arial, sans-serif;
 
     /* General */
     --standard-text: #1A1A1A;
