--- a/css/text-body-formatting.css
+++ b/css/text-body-formatting.css
@@ -132,3 +132,39 @@
   height: 5rem !important;
   border: none !important;
 }
+
+.hide-read-more-container {
+  display: none;
+}
+
+.read-more-btn-container {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  margin-top: 4rem;
+}
+
+.read-more-btn {
+  font-family: var(--site-font);
+  transition: color 0.2s ease, background-color 0.2s ease, border-color 0.2s ease, transform 0.2s ease;
+  width: 8rem;
+  padding: 0.50rem;
+  font-size: 1rem;
+  font-weight: bold;
+  background-color: transparent;
+  color: var(--anchor-link);
+  border: 2px solid var(--anchor-link);
+  border-radius: 0.375rem;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+.read-more-btn:focus,
+.read-more-btn:focus-visible {
+    border: 2px solid var(--anchor-link);
+}
+
+.read-more-btn:hover {
+  color: var(--hover-anchor-link);
+  transform: scale(1.05);
+  cursor: pointer;
+}
