--- a/css/techstack.css
+++ b/css/techstack.css
@@ -1,3 +1,12 @@
+.tech-stack {
+    background: var(--tech-stack-section);
+    border: 0.15rem solid var(--tech-stack-border);
+    border-radius: 0.5rem;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    padding: 1rem;
+    margin-bottom: 2rem;
+}
+
 .badge {
     display: inline-flex;
     align-items: center;
@@ -16,40 +25,30 @@
     letter-spacing: 0.0125rem;
 }
 
-.techStack__grid {
-    margin-top: 0.90rem;
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 0.75rem;
-}
-
-@media (min-width: 43.75rem) {
-    .techStack__grid {
-        grid-template-columns: 1fr 1fr;
-    }
-}
-
 .techStack__section {
     transition: color 0.2s ease, background-color 0.2s ease, border 0.2s ease;
-    background: var(--tech-stack-section);
-    border: 0.15rem solid var(--tech-stack-border);
-    border-radius: 0.5rem;
-    padding: 1rem;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 0.375rem;
 }
+
+.techStack__section:not(:first-child) {
+  margin-top: 0.5rem;
+}
+
 
 .techStack__title {
     font-size: 1.25rem !important;
     font-weight: 700;
     padding: 0;
-    padding: 0 0 0.75rem 0 !important;
-    margin: 0 !important;
+    margin: 0 0.5rem 0 0 !important;
 }
 
 .techStack__badges {
   display: flex;
   flex-wrap: wrap;
-  gap: 0.375rem;
 }
 
 /* Front-end */
