--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,6 +1,6 @@
 .navbar {
   transition: color 0.2s ease, background-color 0.2s ease, border-color 0.2s ease;
-  background-color: var(--nav-background);
+  background: var(--nav-background);
   color: var(--standard-text);
   height: 4rem;
   display: flex;
