--- a/css/techstack.css
+++ b/css/techstack.css
@@ -35,14 +35,14 @@
 }
 
 .techStack__section:not(:first-child) {
-  margin-top: 0.5rem;
+  margin-top: 0.70rem;
 }
 
 
 .techStack__title {
     font-size: 1.25rem !important;
     font-weight: 700;
-    padding: 0;
+    padding: 0 !important;
     margin: 0 0.5rem 0 0 !important;
 }
 
