--- a/css/colors.css
+++ b/css/colors.css
@@ -2,7 +2,6 @@
     --site-font: Helvetica, Arial, sans-serif;
 
     /* General */
-    --always-black: #000000;
     --standard-text: #1A1A1A;
     --always-white: #ffffff;
     --site-background: #eceff1;
@@ -29,6 +28,7 @@
     --hover-default-button: #f5f5f5; 
     --hover-anchor-link: #274d99;
     --hover-project-preview: #22222290;
+    --hover-read-more-text: #ffffff;
 }
 
 [data-theme="dark"] {
@@ -58,4 +58,5 @@
     --hover-default-button: #555555; 
     --hover-anchor-link: #a0c0e5;
     --hover-project-preview: #ffffff70;
+    --hover-read-more-text: #000000;
 }
