--- a/css/colors.css
+++ b/css/colors.css
@@ -1,62 +1,73 @@
 :root {
     --site-font: Helvetica, Arial, sans-serif;
+    --site-transition: 0.4s;
 
     /* General */
     --standard-text: #1A1A1A;
     --always-white: #ffffff;
-    --site-background: #eceff1;
+    --standard-purple: #464ea0;
+    --site-background: #f3f6fb;
     --content-background: #ffffff;
-    --project-preview: #ffffff;
-    --border-project-preview: #f5f5f5;
-    --nav-background: linear-gradient(to right, #ffffff, #bfd5ec);
     --default-button: #ffffff;
-    --active-nav: #ccdff7;
-    --nav-border: #bfd5ec;
+    --contact-button: #ffffff;
+    --hover-default-button: #f3f9ff;
     --contact-border: #9c9c9c;
-    --anchor-link: #3366CC;
-    --content-line: #666666;
-    --code-bg: #f3f3f3;
-    --experience-date: #444444;
-
     --toggle-thumb: #ffffff;
     --toggle-track: #ccc;
 
+    /* Navbar */
+    --nav-background: linear-gradient(to right, #ffffff, #bfd5ec);
+    --active-nav: #c9e0ff;
+    --hover-nav-text: #d6ebff;
+    --nav-border: #bfd5ec;
+
+    /* Project / Experience */
+    --hover-project-preview: #22222290;
+    --project-preview: #ffffff;
+    --border-project-preview: #f5f5f5;
+    --experience-date: #444444;
+
+    /* Text Formatting */
     --tech-stack-section: #dddddd85;
     --tech-stack-border: #1A1A1A;
-
-    --hover-nav-text: #dee8f3;
-    --hover-default-button: #f5f5f5; 
+    --content-line: #666666;
+    --anchor-link: #3366CC;
     --hover-anchor-link: #274d99;
-    --hover-project-preview: #22222290;
+    --code-bg: #f3f3f3;
     --hover-read-more-text: #ffffff;
 }
 
 [data-theme="dark"] {
     /* General */
     --standard-text: #ffffff;
-    --site-background: #111111; /* #141415 is nice too */
+    --site-background: #09090900;
     --content-background: #1D1D1D;
-    --project-preview: #222222;
-    --border-project-preview: #333333;
-    --nav-background: linear-gradient(to right, #363636, #0f0f0f);
-    --default-button: #444444;
-    --active-nav: #111111;
-    --nav-border: #555555;
-    --project-img-border: #9c9c9c;
-    --anchor-link: #83b1e7;
-    --content-line: #444444;
-    --code-bg: #353535;
-    --experience-date: #BBBBBB;
-    
+    --default-button: #343434;
+    --contact-button: #343434;
+    --hover-default-button: #444;
     --toggle-thumb: #000000;
     --toggle-track:  #4d4d4d;
+    --contact-border: #6d78e7;
 
+    /* Navbar */
+    --hover-nav-text: #6069ca50;
+    --active-nav: var(--standard-purple);
+    --nav-border: #555555;
+    --nav-background: linear-gradient(to right, #363636, #0f0f0f);
+
+    /* Project / Experience */
+    --project-preview: #1D1D1D;
+    --project-img-border: #9c9c9c;
+    --border-project-preview: #444;
+    --experience-date: #BBBBBB;
+    --hover-project-preview: #6d78e790;
+
+    /* Text Formatting */
     --tech-stack-section: #13131370;
     --tech-stack-border: #383838;
-
-    --hover-nav-text: #1F1F1F;
-    --hover-default-button: #555555; 
-    --hover-anchor-link: #a0c0e5;
-    --hover-project-preview: #ffffff70;
+    --content-line: #444444;
+    --code-bg: #353535;
+    --anchor-link: #87bcf1;
+    --hover-anchor-link: #9ac7f4;
     --hover-read-more-text: #000000;
 }
