--- a/css/home.css
+++ b/css/home.css
@@ -15,15 +15,9 @@
 .name-header {
     font-size: var(--name-header-size);
     margin: 0;
-    text-shadow:
-        2px 2px 4px rgba(0, 0, 0, 0.1875),
-        0 0 10px rgba(0, 0, 0, 0.15),
-        3px 5px 20px rgba(0, 0, 0, 0.1125),
-        0 0 12px rgba(255, 255, 255, 0.45);
 }
 
-[data-theme="dark"]
-.name-header {
+[data-theme="dark"] .name-header {
     text-shadow:
         0 0 6px rgb(255 255 255 / 40%),
         0 0 10px rgb(255 255 255 / 20%);
@@ -35,15 +29,10 @@
     text-align: center;
     font-weight: 600;
     opacity: 0;
-    text-shadow:
-        1px 1px 2px rgba(0, 0, 0, 0.12),
-        0 0 4px rgba(0, 0, 0, 0.1),
-        0 0 6px rgba(255, 255, 255, 0.4);
 
 }
 
-[data-theme="dark"]
-.name-desc {
+[data-theme="dark"] .name-desc {
     text-shadow:
         0 0 3px rgb(255 255 255 / 40%),
         0 0 5px rgb(255 255 255 / 20%);
