--- a/css/index.css
+++ b/css/index.css
@@ -130,10 +130,6 @@ html, body {
   text-align: var(--main-page-header-align);
   margin: 0;
   flex-grow: 1;
-  text-shadow:
-      1px 1px 2px rgba(0, 0, 0, 0.12),
-      0 0 4px rgba(0, 0, 0, 0.1),
-      0 0 6px rgba(255, 255, 255, 0.4);
 }
 
 [data-theme="dark"]
@@ -165,7 +161,7 @@ html, body {
   transition: color 0.2s ease, background-color 0.2s ease;
   font-family: var(--site-font);
   position: relative;
-  background-color: var(--default-button);
+  background-color: var(--contact-button);
   color: var(--standard-text);
   height: 2.5rem;
   padding: 0.825rem 1.1rem;
