--- a/css/colors.css
+++ b/css/colors.css
@@ -17,8 +17,8 @@
 
     /* Navbar */
     --nav-background: linear-gradient(to right, #ffffff, #bfd5ec);
-    --active-nav: #c9e0ff;
-    --hover-nav-text: #d6ebff;
+    --active-nav: #bad8ff;
+    --hover-nav-text: #d0e8ff;
     --nav-border: #bfd5ec;
 
     /* Project / Experience */
